--- a/app/src/main/res/layout/activity_anarchist.xml
+++ b/app/src/main/res/layout/activity_anarchist.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AnarchistActivity">
+    tools:context=".AnarchistActivity"
+    android:background="@drawable/anarchist">
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/anarchist_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="false"
+        android:dividerHeight="0dp"
+        android:divider="@null">
+
+    </ListView>
+
+</RelativeLayout>
